<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:orderInCategory="60"
        android:icon="@drawable/baseline_search_white_48dp"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/favorite"
        android:orderInCategory="60"
        android:icon="@drawable/baseline_star_white_48dp"
        android:title="@string/add_favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/order"
        android:orderInCategory="60"
        android:icon="@drawable/baseline_sort_white_48dp"
        android:title="@string/order"
        app:showAsAction="always" />
</menu>
