<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_bg"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/app_bar_toolbar" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/avgle"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/icon1"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/baseline_bug_report_white_48dp"
                        android:tint="@color/text_color_primary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/icon1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/source"
                            android:textColor="@color/text_color_primary" />

                        <TextView
                            android:id="@+id/source_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp" />
                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/icon2"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/baseline_error_white_48dp"
                        android:tint="@color/text_color_primary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/icon2"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/statement"
                            android:textColor="@color/text_color_primary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/statement_desc"
                            android:textColor="#8C8C8C"
                            android:textSize="12sp" />
                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/icon3"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/baseline_phonelink_setup_white_48dp"
                        android:tint="@color/text_color_primary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/icon3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/test_model"
                            android:textColor="@color/text_color_primary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/test_model_desc"
                            android:textColor="#8C8C8C"
                            android:textSize="12sp" />
                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/icon5"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/baseline_clear_all_white_48dp"
                        android:tint="@color/text_color_primary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/icon5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cache"
                            android:textColor="@color/text_color_primary" />

                        <TextView
                            android:id="@+id/cache"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#8C8C8C"
                            android:textSize="12sp" />
                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/icon4"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/baseline_code_white_48dp"
                        android:tint="@color/text_color_primary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/icon4"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/final_compile"
                            android:textColor="@color/text_color_primary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/final_compile_time"
                            android:textColor="#8C8C8C"
                            android:textSize="12sp" />
                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/check_update"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/icon6"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/baseline_cloud_download_white_48dp"
                        android:tint="@color/text_color_primary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/icon6"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/now_version"
                            android:textColor="@color/text_color_primary" />

                        <TextView
                            android:id="@+id/version"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#8C8C8C"
                            android:textSize="12sp" />
                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>